--- a/README.org
+++ b/README.org
@@ -2,6 +2,7 @@
 
 * 재미있는 하스켈을 배워보세요
 ** [[http://learnyouahaskell.com][learnyouahaskell.com]] 에서 나온 온라인 책을 번역중입니다.
+** 본 번역은 [[http://ensky0.egloos.com/][꽃돌이푸]] 님과 함께하고 있습니다.
 
 * 진행상황 [7%]
 1. [X] [[http://ensky0.egloos.com/5511527][머리말]]
