--- a/README.org
+++ b/README.org
@@ -1,15 +1,14 @@
 #+TITLE: Learn You a Haskell
 
 * 재미있는 하스켈을 배워보세요
-** [[http://learnyouahaskell.com][learnyouahaskell.com]] 에서 나온 온라인 책을 번역중입니다.
-** 본 번역은 [[http://ensky0.egloos.com/][꽃돌이푸]] 님과 함께하고 있습니다.
-
-* 진행상황 [7%]
+- [[http://learnyouahaskell.com][learnyouahaskell.com]] 에서 나온 온라인 책을 번역중입니다.
+- 본 번역은 [[http://ensky0.egloos.com/][꽃돌이푸]] 님과 함께하고 있습니다.
+* 진행상황 [14%]
 1. [X] [[http://ensky0.egloos.com/5511527][머리말]]
 2. [ ] [[http://ensky0.egloos.com/5518698][시작]]
-3. [ ] [[http://netpyoung.github.com/learn_you_a_haskell_for_great_good/types-and-typeclasses.html][타입과 타입클래스]]
+3. [X] [[http://netpyoung.github.com/learn_you_a_haskell_for_great_good/types-and-typeclasses.html][타입과 타입클래스]]
 4. [ ] Syntax in Functions
-5. [ ] Recursion
+5. [ ] [[http://netpyoung.github.com/learn_you_a_haskell_for_great_good/recursion.html][재귀]]
 6. [ ] Higher Order Functions
 7. [ ] Modules
 8. [ ] Making Our Own Types and Typeclasses
