--- a/README.org
+++ b/README.org
@@ -9,7 +9,7 @@
 3. [X] [[http://netpyoung.github.com/learn_you_a_haskell_for_great_good/types-and-typeclasses.html][타입과 타입클래스]]
 4. [ ] Syntax in Functions
 5. [ ] [[http://netpyoung.github.com/learn_you_a_haskell_for_great_good/recursion.html][재귀]]
-6. [ ] Higher Order Functions
+6. [ ] Higher Order Functionsa
 7. [ ] Modules
 8. [ ] Making Our Own Types and Typeclasses
 9. [ ] Input and Output
